# WarmDock

./: .gitignore  .npmrc  .prettierignore  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.claude/: launch.json
apps/desktop/: index.html  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  state.rs
apps/desktop/src-tauri/src/catalog/: unlock.rs
apps/desktop/src-tauri/src/commands/: app_cmds.rs  cache_cmds.rs  dev_cmds.rs  mod.rs  unlock_cmds.rs  window_cmds.rs
apps/desktop/src-tauri/src/domain/: clock.rs  settings.rs
apps/desktop/src-tauri/src/storage/: wallet_repo.rs
apps/desktop/src-tauri/tests/: migration_test.rs  purchase_test.rs
apps/desktop/src-tauri/tests/common/: mod.rs
apps/mobile/: App.tsx  app.json  index.ts  metro.config.js  package.json  tsconfig.json
apps/web/: .env.example  next.config.mjs  package.json
docs/task-reports/: 2026-06-20-warmdock-warmai-task-01-api-gateway.md  2026-06-20-warmdock-warmai-task-02-app-ai-action.md  2026-06-20-warmdock-warmai-task-03-desktop-wiring.md  2026-06-20-warmdock-warmai-task-04-task-modal.md  2026-06-20-warmdock-warmai-task-05-verification.md
mockups/: abilities-b1-canvas.html  abilities-b1-landscape-canvas.html
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_add_unlock_nodes.sql  (+1 more)
src-tauri/src/: db.rs  (+6 more)
supabase/: .env.example  config.toml
(+212 files in other folders)
