[package]
name = "warmdock"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "warmdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# keyring v3 needs an explicit platform backend feature; without it the OS
# credential store is never used and writes fail. (Add apple-native /
# sync-secret-service when targeting macOS / Linux desktop.)
keyring = { version = "3", features = ["windows-native"] }
getrandom = "0.2"
aes-gcm = "0.10"
